--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,19 +2,31 @@ buildscript {
     ext {
         buildToolsVersion = "35.0.0"
         minSdkVersion = 24
-        compileSdkVersion = 35
-        targetSdkVersion = 35
-        ndkVersion = "27.1.12297006"
+        compileSdkVersion = 34
+        targetSdkVersion = 34
+        // ndkVersion is optional; comment out to avoid build failure if specific NDK not installed
+        // ndkVersion = "27.1.12297006"
         kotlinVersion = "2.1.20"
     }
     repositories {
         google()
         mavenCentral()
+        maven {
+            url "$rootDir/../node_modules/react-native/android"
+        }
     }
     dependencies {
-        classpath("com.android.tools.build:gradle")
+        classpath("com.android.tools.build:gradle:4.2.2")
         classpath("com.facebook.react:react-native-gradle-plugin")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
+    }
+}
+
+allprojects {
+    repositories {
+        maven {
+            url "$rootDir/../node_modules/react-native/android"
+        }
     }
 }
 
