--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "EthInsights",
-  "displayName": "EthInsights"
+  "name": "react-native-test",
+  "displayName": "react-native-test"
 }
