--- a/ios/EthInsights.xcodeproj/xcshareddata/xcschemes/EthInsights.xcscheme
+++ b/ios/EthInsights.xcodeproj/xcshareddata/xcschemes/EthInsights.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "EthInsights.app"
-               BlueprintName = "EthInsights"
-               ReferencedContainer = "container:EthInsights.xcodeproj">
+               BuildableName = "react-native-test.app"
+               BlueprintName = "react-native-test"
+               ReferencedContainer = "container:react-native-test.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "EthInsightsTests.xctest"
-               BlueprintName = "EthInsightsTests"
-               ReferencedContainer = "container:EthInsights.xcodeproj">
+               BuildableName = "react-native-testTests.xctest"
+               BlueprintName = "react-native-testTests"
+               ReferencedContainer = "container:react-native-test.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "EthInsights.app"
-            BlueprintName = "EthInsights"
-            ReferencedContainer = "container:EthInsights.xcodeproj">
+            BuildableName = "react-native-test.app"
+            BlueprintName = "react-native-test"
+            ReferencedContainer = "container:react-native-test.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "EthInsights.app"
-            BlueprintName = "EthInsights"
-            ReferencedContainer = "container:EthInsights.xcodeproj">
+            BuildableName = "react-native-test.app"
+            BlueprintName = "react-native-test"
+            ReferencedContainer = "container:react-native-test.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
